Update aflam ajnbia motrjama.html

--- a/افلام اجنبي مترجمة.html
+++ b/افلام اجنبي مترجمة.html
@@ -528,7 +528,7 @@ M3U4P3dtc0F1dGhTaWduPQoKCg==#Intent;scheme=xmtv;package=co.wuffy.player;end" rel
             
             
             <a href="intent://aHR0cHM6Ly9zdHJlYW0uZnVzaGFhci5saW5rL21vdmllLzQ1Mjc5LzQ1Mjc5Lm1wNC9jaHVuay5t
-M3U4P3dtc0F1dGhTaWduPQoKCg==#Intent;scheme=xmtv;package=co.wuffy.player;end" rel=nofollow><button id="tab2" class="button"id="remot2" tabindex="1">
+M3U4P3dtc0F1dGhTaWduPQoKCg==#Intent;scheme=xmtv;package=co.wuffy.player;end" rel=nofollow><button  class="button"id="remot2" tabindex="1">
 <img src="https://www12.0zz0.com/2023/09/17/21/418556154.jpg"><h2>🎥 شاهد Bed Rest مترجم (2023) مترجم</h2></button></a>
 
 
