--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -437,8 +437,8 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/47663/47663.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47663/47663.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47663/47663.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+ <a href="intent://stream.fushaar.link/movie/47663/47663.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47663/47663.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->  
                   
  <button class="button"><img src="https://media.fushaar.com/media/2024/04/1pdfLvkbY9ohJlCjQH2CZjjYVvJ-229x337.jpg" alt="app tv">
@@ -492,8 +492,8 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/47595/47595.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47595/47595-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47595/47595-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+ <a href="intent://stream.fushaar.link/movie/47595/47595-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47595/47595-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->      
             <!--+++++++++++++++++-->  
        
@@ -505,8 +505,8 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/47564/47564.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47564/47564-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47564/47564.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+ <a href="intent://stream.fushaar.link/movie/47564/47564-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47564/47564.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->    
   <button class="button"><img src="https://media.fushaar.com/media/2024/03/rULWuutDcN5NvtiZi4FRPzRYWSh-229x337.jpg" alt="app tv">
         <div class="lkhat1"> Madame Web</div>
@@ -516,7 +516,7 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/47458/47458.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47458/47458.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
+ <a href="intent://stream.fushaar.link/movie/47458/47458.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
                                          <a href="intent://stream.fushaar.link/movie/47458/47458.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->    
   <button class="button"><img src="https://media.fushaar.com/media/2024/03/oLMzL9cpBBnkMGF8j4Z5Dbi2Z5u-229x337.jpg" alt="app tv">
@@ -528,7 +528,7 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
    <a href="intent://stream.fushaar.link/movie/47510/47510.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
  <a href="intent://stream.fushaar.link/movie/47510/47510.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47510/47510.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+                                         <a href="intent://stream.fushaar.link/movie/47510/47510.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->                              
     <button class="button"><img src="https://media.fushaar.com/media/2024/03/sMp34cNKjIb18UBOCoAv4DpCxwY-229x337.jpg" alt="app tv">
         <div class="lkhat1">الفتاة</div>
@@ -551,7 +551,7 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
    <a href="intent://stream.fushaar.link/movie/47470/47470.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
  <a href="intent://stream.fushaar.link/movie/47470/47470-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47470/47470-.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+                                         <a href="intent://stream.fushaar.link/movie/47470/47470-.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->               
 <button class="button"><img src="https://media.fushaar.com/media/2023/12/jE5o7y9K6pZtWNNMEw3IdpHuncR-229x337.jpg" alt="app tv">
         <div class="lkhat1">Napoleon</div>
@@ -562,7 +562,7 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
    <a href="intent://stream.fushaar.link/movie/46883/46883.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
  <a href="intent://stream.fushaar.link/movie/46883/46883.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/46883/46883.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+                                         <a href="intent://stream.fushaar.link/movie/46883/46883.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->                 
  <button class="button"><img src="https://media.fushaar.com/media/2024/03/aOOvtA7OINVbARaN09Mnuv8DGB-229x337.jpg" alt="app tv">
         <div class="lkhat1">Argylle</div>
@@ -572,8 +572,8 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/47465/47465.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47465/47465-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47465/47465.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+ <a href="intent://stream.fushaar.link/movie/47465/47465-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47465/47465.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++--> 
   <button class="button"><img src="https://media.fushaar.com/media/2024/02/vfEG79SQIg3p6B8rBLVeIo2BBhb-229x337.jpg" alt="app tv">
         <div class="lkhat1">اليد اليمنى لريد</div>
@@ -584,7 +584,7 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
    <a href="intent://stream.fushaar.link/movie/47433/47433.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
  <a href="intent://stream.fushaar.link/movie/47433/47433.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47433/47433.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+                                         <a href="intent://stream.fushaar.link/movie/47433/47433.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->                   
  <button class="button"><img src="https://media.fushaar.com/media/2024/02/bIeEMMvfzgbMBtYaEWtxrFnt6Vo-229x337.jpg" alt="app tv">
         <div class="lkhat1">أرض السوء</div>
@@ -595,8 +595,8 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 
    <a href="intent://stream.fushaar.link/movie/47411/47411.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47411/47411.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47411/47411.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+ <a href="intent://stream.fushaar.link/movie/47411/47411.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47411/47411.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->                       
   <button class="button"><img src="https://media.fushaar.com/media/2023/12/8xV47NDrjdZDpkVcCFqkdHa3T0C-229x337.jpg" alt="app tv">
         <div class="lkhat1">أكوامان والمملكة</div>
@@ -607,8 +607,8 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 
    <a href="intent://stream.fushaar.link/movie/47061/47061.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47061/47061.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47061/47061.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+ <a href="intent://stream.fushaar.link/movie/47061/47061.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47061/47061.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->                
  <button class="button"><img src="https://media.fushaar.com/media/2024/01/A7EByudX0eOzlkQ2FIbogzyazm2-229x337.jpg" alt="app tv">
         <div class="lkhat1">مربي النحل</div>
@@ -619,8 +619,8 @@ YXlsaXN0Lm0zdTg/d21zQXV0aFNpZ24=
 
    <a href="intent://stream.fushaar.link/movie/47239/47239.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
- <a href="intent://stream.fushaar.link/movie/47239/47239.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://stream.fushaar.link/movie/47239/47239.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+ <a href="intent://stream.fushaar.link/movie/47239/47239.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47239/47239.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->                   
  <button class="button"><img src="https://media.fushaar.com/media/2024/02/qYczuua2tgjfxcdtLNDC0n4mOHz-229x337.jpg" alt="app tv">
         <div class="lkhat1">12.12: The Day</div>
