--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -336,6 +336,34 @@ document.addEventListener('DOMContentLoaded', function() {
 <div class="section" data-section="aflam-modblja-02">
 
 
+
+<button class="button"><img src="https://media.fushaar.com/media/2024/02/sIarhkJFX9QURFc0ZD35N2wmqtn-229x337.jpg" >
+        <div class="lkhat1">الجنوب القذر</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/47285/47285.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47285/47285-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47285/47285-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button>
+ <!-- +++++++++++++++++++++++++++++ -->
+ 
+ 
+ <button class="button"><img src="https://media.fushaar.com/media/2024/02/91YJFHdTTF24Vab33XbToAh3TOo-229x337.jpg" >
+        <div class="lkhat1">المربع: استعارة</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/47421/47421.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47421/47421-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47421/47421-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button>
+ <!-- +++++++++++++++++++++++++++++ -->
+ 
   <button class="button"><img src="https://media.fushaar.com/media/2024/04/5qcHcoJL3otMwJPKnbV5M3a1jQd-229x337.jpg" >
         <div class="lkhat1">مواعدة بيلي</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
