--- a/movies Batman.html
+++ b/movies Batman.html
@@ -316,7 +316,7 @@ document.addEventListener('DOMContentLoaded', function() {
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
-<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/686/686333.png?ga=GA1.1.1704221200.1716147359" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/41368/41368.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
                                         <a href="intent://stream.fushaar.link/movie/41368/41368.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
@@ -328,7 +328,7 @@ document.addEventListener('DOMContentLoaded', function() {
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
-<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/686/686333.png?ga=GA1.1.1704221200.1716147359" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/11452/11452.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
                                         <a href="intent://stream.fushaar.link/movie/11452/11452.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
@@ -340,7 +340,7 @@ document.addEventListener('DOMContentLoaded', function() {
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
-<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/686/686333.png?ga=GA1.1.1704221200.1716147359" alt="Watched Icon" style="display: none;"></div>
    <a href="intent://stream.fushaar.link/movie/1364/1364.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
                                         <a href="intent://stream.fushaar.link/movie/1364/1364.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
