--- a/movies Batman.html
+++ b/movies Batman.html
@@ -306,7 +306,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <div align="center" >
 <div class="container">
 <div id="page">
-<div class="section" data-section="batman">
+<div class="section" data-section="batman01">
         <!--+++++++++++++++++-->  
   <button class="button">
 <img src="https://media.fushaar.com/media/2022/03/image-229x337.jpeg" alt="app tv">
@@ -322,7 +322,7 @@ document.addEventListener('DOMContentLoaded', function() {
                <!--+++++++++++++++++-->              
 <button class="button">
 <img src="https://media.fushaar.com/media/2016/03/6bCplVkhowCjTHXWv49UjRPn0eK-229x337.jpg" alt="app tv">
-        <div class="Movies-name ">باتمان ضد سوبرمان2016</div>
+        <div class="Movies-name"style="font-size: 14px;">باتمان ضد سوبرمان2016</div>
    <div class="serveur">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
