Update movies Spider Man.html

--- a/movies Spider Man.html
+++ b/movies Spider Man.html
@@ -182,6 +182,7 @@ z-index: 1;
     border: 2px solid gold;
     margin-top: 4px;
     width: 140px; /* عرض الحاوية */
+    height: 18px;
 }
 
       .number-container {
