Update movies Resident Evil.html

--- a/movies Resident Evil.html
+++ b/movies Resident Evil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movies Batman </title>
+    <title>Movies  Resident Evil </title>
   <link href="https://cdn.icon-icons.com/icons2/125/PNG/96/movies_drive_20265.png" rel="icon" type="image/x-icon">
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -180,8 +180,9 @@ z-index: 1;
     overflow: hidden;
     border-radius: 8px;
     border: 2px solid gold;
-    margin-top: 4px;
+    margin-top: 2px;
     width: 140px; /* عرض الحاوية */
+    height: 18px;
 }
 
 .marquee {
