--- a/سلاسل الافلام.html
+++ b/سلاسل الافلام.html
@@ -84,7 +84,7 @@ z-index: 1;
                 position: relative;
            background:#339a8a;
              background-position: center;
-                align-items: center;direction: rtl;
+                align-items: center;
                 justify-content: center;
            
         }
@@ -93,9 +93,9 @@ z-index: 1;
        .button {
            height: 190px;
            width: 150px;
-            position: relative;direction: rtl;
+            position: relative;
                 align:center;
-                display: inline-block; /* لجعل الزر عنصراً مستطيل الشكل */
+                display: inline-block; /* لجعل الزر عنصراً مستطيل الشكل */color: #fff;
             padding:2px; /* تعيين الهامش الداخلي للزر */
             border-radius: 8px; /* تدوير الزوايا لتصميم أفضل */
              margin: 6px;
@@ -172,10 +172,9 @@ text-decoration:none;
 }
 
 .Movies-name, .serveur {
-    padding: 2px;
+    padding: 2px;direction: rtl;
     text-align: center;
     font-size: 15px;
-    color: #fff;
     font-weight: bold;
     display: flex;
     align-items: center;
@@ -195,6 +194,7 @@ text-decoration:none;
     display: inline-block;
     padding-left: 100%; /* يضمن بدء النص من خارج الحاوية */
     animation: marquee 8s linear infinite;
+    direction: ltr;
 }
 
 @keyframes marquee {
