--- a/افلام-هندي-2024.html
+++ b/افلام-هندي-2024.html
@@ -9,8 +9,8 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-<body>
+        <meta itemprop="embedURL" content="https://t4cce4ma.shop/run/4d15949ef48a34eed6d15511cd4b57932788f670d51f63a26a565ee760267f8b6942e33c2559425532381f28c9079607b1751d326392d0951b6151d9277165ef2d098ed7b0e5f1ae4a3a7535aae635f2aa6918a905de38dd275845b1a314cb1013a19d?Key=4gQ8WGQQCkjTznKo_wodSQ&Expires=1717279145" />
+
 
     <!----------  اكواد استايل القائمة  ------------>
     <style>
@@ -320,9 +320,7 @@ document.addEventListener('DOMContentLoaded', function() {
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
-   <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvamgyYmV0eXUzeXBnL0ZpZ2h0ZXIuMjAyNC43MjBw
-LkNBTVJpcC5BUi5EVUIuVjIud2VjaWltYS5hdXRvcy5tcDQuaHRtbD9LZXk9NlMzWUExMW9JZzNl
-NmVEWldmOXI3ZyZFeHBpcmVzPTE3MTM1NTkyNzI=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+   <a href="intent://tgb4.top15top.shop/jh2betyu3ypg/Fighter.2024.720p.CAMRip.AR.DUB.V2.weciima.autos.mp4.html?Key=4gQ8WGQQCkjTznKo_wodSQ&Expires=1717279145#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">FHD</div></a>
 
                                         <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvamgyYmV0eXUzeXBnL0ZpZ2h0ZXIuMjAyNC43MjBw
 LkNBTVJpcC5BUi5EVUIuVjIud2VjaWltYS5hdXRvcy5tcDQuaHRtbD9LZXk9Q2ljNzlMV3NWLWZf
@@ -340,16 +338,12 @@ NmhyRzZDWE96QSZFeHBpcmVzPTE3MTM1NTM2Mjk=#Intent;scheme=xmtv;package=co.wuffy.pla
                         <!-- إضافة شكل الأرقام الدائرية -->
                         <div class="number-container">  <div> 
 <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
-   <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvcXA2OGx0ZHgxcmpnL1NoYWl0YWFuLjIwMjQuRHVi
-YmVkLjcyMHAuSERDQU0uV2VjaW1hLnR1YmUubXA0Lmh0bWw/S2V5PXl3ZGR0b09mMWRCOE80dHZB
-ZjFwNWcmRXhwaXJlcz0xNzEzNTYwODIx#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+   <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3Ava201ZGh1dTJhZmpnL1NoYWl0YWFuLjIwMjQuMTA4
+MHAuTkYuV0VCLURMLndlY2lpbWEuYXV0b3MubXA0Lmh0bWw/S2V5PTljTkFrbTJiY2gxRmJpSVp3
+UEFtRUEmRXhwaXJlcz0xNzE3Mjc1NDg1#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">FHD</div></a>
 
-                                        <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvcXA2OGx0ZHgxcmpnL1NoYWl0YWFuLjIwMjQuRHVi
-YmVkLjcyMHAuSERDQU0uV2VjaW1hLnR1YmUubXA0Lmh0bWw/S2V5PU0wRDFiQXo3STJzWVRzU0Jf
-TEthWUEmRXhwaXJlcz0xNzEzNTU1MjMy=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
-                                         <a href="intent://aHR0cHM6Ly90Z2I0LnRvcDE1dG9wLnNob3AvcXA2OGx0ZHgxcmpnL1NoYWl0YWFuLjIwMjQuRHVi
-YmVkLjcyMHAuSERDQU0uV2VjaW1hLnR1YmUubXA0Lmh0bWw/S2V5PU0wRDFiQXo3STJzWVRzU0Jf
-TEthWUEmRXhwaXJlcz0xNzEzNTU1MjMy=#Intent;scheme=xmtv;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+                                        <a href="https://jodwish.com/e/3kwn0cpisr7e "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="https://vipserver.liiivideo.com/embed-8mr5sg0akmk3.html"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->
                
          <!--+++++++++++++++++-->  
