--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -335,15 +335,15 @@ d2dlbDZyJmRsPTA=#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot"
     <div>
       <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/686/686333.png?ga=GA1.1.1704221200.1716147359" alt="Watched Icon" style="display: none;">
     </div>
- <a  href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvZmxjbTNkaWhwamU3M205d2k0M2hjL0FyY2Fk
-aWFuLjIwMjQuQVIuRFVCLm1wND9ybGtleT04bzZ4cnB3amNjM3FwM3Vsank3ZDVjNXdoJnN0PW4w
-d2dlbDZyJmRsPTA=Intent;scheme=xmtv;package=co.wuffy.player;end">
+ <a  href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvYXljaGNtbzZrZ2V4Z3c4enNjcGZoL1NsZWVw
+aW5nLkRvZ3MuMjAyNC5BUi5EVUIubXA0P3Jsa2V5PW1jaGd4a3V5MTQ4Mng5ZHV2YmM2ZHRjY3km
+c3Q9dnJzMG8weWkmZGw9MA==Intent;scheme=xmtv;package=co.wuffy.player;end">
       <div id="remot" tabindex="1" class="number">FHD</div>
     </a>
     
-    <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvZmxjbTNkaWhwamU3M205d2k0M2hjL0FyY2Fk
-aWFuLjIwMjQuQVIuRFVCLm1wND9ybGtleT04bzZ4cnB3amNjM3FwM3Vsank3ZDVjNXdoJnN0PW4w
-d2dlbDZyJmRsPTA=#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div>
+    <a href="intent://aHR0cHM6Ly9kbC5kcm9wYm94LmNvbS9zY2wvZmkvYXljaGNtbzZrZ2V4Z3c4enNjcGZoL1NsZWVw
+aW5nLkRvZ3MuMjAyNC5BUi5EVUIubXA0P3Jsa2V5PW1jaGd4a3V5MTQ4Mng5ZHV2YmM2ZHRjY3km
+c3Q9dnJzMG8weWkmZGw9MA==#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div>
     </a>
     
     <a href="https://raw.githack.com/ahmadmk2023/aflm-ajnabi-AR/main/Sleeping%20Dogs(2024)AR.html">
@@ -353,10 +353,17 @@ d2dlbDZyJmRsPTA=#Intent;scheme=xmtv;package=co.wuffy.player;end"><div id="remot"
   </div>
 </button>             
 
+<script>
+document.querySelectorAll('.marquee').forEach((el, index) => {
+  const delay = Math.random() * 5; // تأخير عشوائي يصل إلى 6 ثوان
+  el.style.animation = 'marquee 10s linear infinite';
+  el.style.animationDelay = `${delay}s`;
+});
+</script>
 
   </div> 
-         </div>
-        </div>
+ </div>
+</div>
     </div>
 </body>
 </html>
