--- a/سلاسل الافلام.html
+++ b/سلاسل الافلام.html
@@ -253,6 +253,9 @@ text-decoration:none;
       <button class="button"onclick="window.open('https://raw.githack.com/ahmadmk2023/Movies-free1/main/movise-Undisputed.html')">
       <img src="https://c4.wallpaperflare.com/wallpaper/673/888/899/boyka-undisputed-scott-adkins-shirtless-wallpaper-preview.jpg" alt="thumb"onerror="handleImageError(this)"><div class="Movies-name"><span class="marquee">مشاهدة الافلام Boyka: Undisputed  مترجم</span> </div></button>   
   
+        <button class="button"onclick="window.open('https://raw.githack.com/ahmadmk2023/Movies-free1/main/movise-The%20Terminator.html')">
+      <img src="https://c4.wallpaperflare.com/wallpaper/84/646/522/terminator-arnold-schwarzenegger-terminator-genisys-cyborg-wallpaper-preview.jpg" alt="thumb"onerror="handleImageError(this)"><div class="Movies-name"><span class="marquee"> سلسلة افلام The Terminator
+ مترجم</span> </div></button>   
   
    <script>
 function handleImageError(img) {
@@ -260,7 +263,7 @@ function handleImageError(img) {
 }
 document.querySelectorAll('.marquee').forEach((el, index) => {
   const delay = Math.random() * 6; // تأخير عشوائي يصل إلى 6 ثوان
-  el.style.animation = 'marquee 20s linear infinite';
+  el.style.animation = 'marquee 15s linear infinite';
   el.style.animationDelay = `${delay}s`;
 });
 
