--- a/movise-Predator.html
+++ b/movise-Predator.html
@@ -469,14 +469,14 @@ text-decoration:none;
     <div>
       <img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/686/686333.png?ga=GA1.1.1704221200.1716147359" alt="Watched Icon" style="display: none;">
     </div>
- <a  href="intent://stream.fushaar.link/movie/22545/22545.mp4/chunk.m3u8?nimblesessionid=#Intent;scheme=https;package=co.wuffy.player;end ">
+ <a  href="intent://dl.dropbox.com/scl/fi/vlg9goebqilzd5nni6jca/Alien-Predator-7-2018.ts?rlkey=r6ccrc14ucbjcthewn4uwz8wb&st=w16l18qm&dl=0#Intent;scheme=https;package=co.wuffy.player;end ">
       <div id="remot" tabindex="1" class="number">FHD</div>
     </a>
     
-    <a href="intent://stream.fushaar.link/movie/22545/22545-480p.mp4/chunk.m3u8?nimblesessionid=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div>
+    <a href="intent://dl.dropbox.com/scl/fi/vlg9goebqilzd5nni6jca/Alien-Predator-7-2018.ts?rlkey=r6ccrc14ucbjcthewn4uwz8wb&st=w16l18qm&dl=0#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div>
     </a>
     
-    <a href="intent://stream.fushaar.link/movie/22545/22545-240p.mp4/chunk.m3u8?nimblesessionid=#Intent;scheme=https;package=co.wuffy.player;end ">
+    <a href="https://vidbob.com/embed-2n5xx86ulv03.html">
       <div id="remot" tabindex="1" class="number">SD</div>
     </a>
      <div id="VS">07</div>
