--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -286,8 +286,43 @@ h1 {
 <div align="center" >
 <div class="container">
 <div id="page">
-<div class="section" data-section="aflam-modblja-02">
+<div class="section" data-section="aflam-modblja-002">
+<button class="button"><img src="https://media.fushaar.com/media/2024/05/z1p34vh7dEOnLDmyCrlUVLuoDzd-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Godzilla X Kong  New</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
 
+   <a href="intent://stream.fushaar.link/movie/47773/47773.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47773/47773-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47773/47773-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button>
+ <!--+++++++++++++++++-->  
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/qZPLK5ktRKa3CL4sKRZtj8UlPYc-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Under Paris</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/47855/47855.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47855/47855-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47860/47860-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button>
+ <!--+++++++++++++++++-->  
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/rosJ1CzIq4Re0YGqhVBgh9Bqc85-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Die Hart 2: Die Harter</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/47855/47855.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47860/47860-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47860/47860-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button>
+ <!--+++++++++++++++++-->  
 <button class="button"><img src="https://media.fushaar.com/media/2024/06/mkQEa3W4UbkAaL8kwv7pj7AiM0u-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">لا يمكنك الهرب إلى الأبد</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
