--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -287,6 +287,19 @@ h1 {
 <div class="container">
 <div id="page">
 <div class="section" data-section="aflam-modblja-002">
+
+<button class="button"><img src="https://media.fushaar.com/media/2019/09/vOl6shtL0wknjaIs6JdKCpcHvg8-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">مستعد أم لا</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+
+   <a href="intent://stream.fushaar.link/movie/27230/27230.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/27230/27230-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/27230/27230-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button>
+ <!--+++++++++++++++++-->  
 <button class="button"><img src="https://media.fushaar.com/media/2024/05/z1p34vh7dEOnLDmyCrlUVLuoDzd-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">Godzilla X Kong  New</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
