--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -288,6 +288,110 @@ h1 {
 <div id="page">
 <div class="section" data-section="aflam-modblja-002">
 
+
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/fzmQ7mMYlBE8q459F6x9BAGgmj9-229x337.jpg" alt="app tv">
+        <div class="lkhat1">ظلام رجل</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47919/47919.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47919/47919.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47919/47919.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2024/05/bcM2Tl5HlsvPBnL8DKP9Ie6vU4r-229x337.jpg" alt="app tv">
+        <div class="lkhat1">Atlas-أطلس</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47790/47790.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47790/47790.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47790/47790.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+              <button class="button"><img src="https://media.fushaar.com/media/2018/08/afdZAIcAQscziqVtsEoh2PwsYTW-229x337.jpg" alt="app tv">
+        <div class="lkhat1">Alpha-2018</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/22195/22195.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/22195/22195.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/22195/22195.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47919/47919.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++--> 
+               
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/3szLL10qscO4Z0kwyiGmq2IqydS-229x337.jpg" alt="app tv">
+        <div class="lkhat1">ساعي</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47877/47877.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47877/47877.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47877/47877.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2024/05/m3bwUWLBe5ogVB8HmpQs2YNNq3S-229x337.jpg" alt="app tv">
+        <div class="lkhat1">Abigail</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47758/47758.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47758/47758.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47758/47758.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/y9zzaN65LOO56nUGC31x9mWQzoi-229x337.jpg" alt="app tv">
+        <div class="lkhat1">فتاة ميلر</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47892/47892.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47892/47892.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47892/47892.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++--> 
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/a7jnQXLnBtrR5pbFLslYrnAC4ye-229x337.jpg" alt="app tv">
+        <div class="lkhat1">تصحيح للعيش</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47904/47904.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47904/47904.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47904/47904.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++--> 
+
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/aBkqu7EddWK7qmY4grL4I6edx2h-229x337.jpg" alt="app tv">
+        <div class="lkhat1">كبش الفداء</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47887/47887.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47887/47887.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47887/47887.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++--> 
+               <!--+++++++++++++++++-->  
+         
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/jSR06FpV1H36OmW0jfEmvG73l2r-229x337.jpg" alt="app tv">
+        <div class="lkhat1"> قاتل الطائفة</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47882/47882.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47882/47882.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47882/47882.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->  
 <button class="button"><img src="https://media.fushaar.com/media/2019/09/vOl6shtL0wknjaIs6JdKCpcHvg8-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">مستعد أم لا</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
