--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -287,9 +287,55 @@ h1 {
 <div class="container">
 <div id="page">
 <div class="section" data-section="aflam-modblja-002">
+<!--+++++++++++++++++-->
 
+<!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2024/07/6XJM3C47iGOK9nFU6yLFCSf4U5c-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Trigger Warning</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47949/47949.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
 
-<button class="button"><img src="https://media.fushaar.com/media/2024/06/fzmQ7mMYlBE8q459F6x9BAGgmj9-229x337.jpg" alt="app tv">
+ <a href="intent://stream.fushaar.link/movie/47949/47949-480p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47949/47949-240p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/8Jk3aS7tMOD9VRHy7GPIP5OibWw-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">التعامل مع اللاموتى</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/47933/47933.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/47933/47933-480p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/47933/47933-240p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2018/12/gzHxCzqfGx62zNHJ4OIfWpQLueo-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">The Bouncer-حارس</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/23935/23935.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/23935/23935-480p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/23935/23935-240p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+ <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2021/11/jKuDyqx7jrjiR9cDzB5pxzhJAdv-329x495.jpg" alt="app tv"onerror="handleImageError(this)">
+        <div class="lkhat1">Finch-فينش</div>
+   <div class="khlfia">  سيرفرات المشاهدة</div> 
+                        <!-- إضافة شكل الأرقام الدائرية -->
+                        <div class="number-container">  <div> 
+<img class="watched-icon" src="https://cdn-icons-png.freepik.com/512/2009/2009778.png?ga=GA1.1.696197500.1713527064" alt="Watched Icon" style="display: none;"></div>
+   <a href="intent://stream.fushaar.link/movie/39805/39805.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end "><div id="remot" tabindex="1" class="number">FHD</div></a>
+
+ <a href="intent://stream.fushaar.link/movie/39805/39805.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
+                                         <a href="intent://stream.fushaar.link/movie/39805/39805.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
+               <!--+++++++++++++++++-->
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/fzmQ7mMYlBE8q459F6x9BAGgmj9-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">ظلام رجل</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
@@ -311,7 +357,7 @@ h1 {
  <a href="intent://stream.fushaar.link/movie/47790/47790.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
                                          <a href="intent://stream.fushaar.link/movie/47790/47790.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->
-              <button class="button"><img src="https://media.fushaar.com/media/2018/08/afdZAIcAQscziqVtsEoh2PwsYTW-229x337.jpg" alt="app tv">
+              <button class="button"><img src="https://media.fushaar.com/media/2018/08/afdZAIcAQscziqVtsEoh2PwsYTW-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">Alpha-2018</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
@@ -334,7 +380,7 @@ h1 {
  <a href="intent://stream.fushaar.link/movie/47877/47877.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
                                          <a href="intent://stream.fushaar.link/movie/47877/47877.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->
-<button class="button"><img src="https://media.fushaar.com/media/2024/05/m3bwUWLBe5ogVB8HmpQs2YNNq3S-229x337.jpg" alt="app tv">
+<button class="button"><img src="https://media.fushaar.com/media/2024/05/m3bwUWLBe5ogVB8HmpQs2YNNq3S-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">Abigail</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
@@ -345,7 +391,7 @@ h1 {
  <a href="intent://stream.fushaar.link/movie/47758/47758.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
                                          <a href="intent://stream.fushaar.link/movie/47758/47758.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++-->
-<button class="button"><img src="https://media.fushaar.com/media/2024/06/y9zzaN65LOO56nUGC31x9mWQzoi-229x337.jpg" alt="app tv">
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/y9zzaN65LOO56nUGC31x9mWQzoi-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">فتاة ميلر</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
@@ -356,7 +402,7 @@ h1 {
  <a href="intent://stream.fushaar.link/movie/47892/47892.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number">HD</div></a>
                                          <a href="intent://stream.fushaar.link/movie/47892/47892.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++--> 
-<button class="button"><img src="https://media.fushaar.com/media/2024/06/a7jnQXLnBtrR5pbFLslYrnAC4ye-229x337.jpg" alt="app tv">
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/a7jnQXLnBtrR5pbFLslYrnAC4ye-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">تصحيح للعيش</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
@@ -368,7 +414,7 @@ h1 {
                                          <a href="intent://stream.fushaar.link/movie/47904/47904.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end"><div id="remot" tabindex="1" class="number" >SD</div></a> </div ></button> 
                <!--+++++++++++++++++--> 
 
-<button class="button"><img src="https://media.fushaar.com/media/2024/06/aBkqu7EddWK7qmY4grL4I6edx2h-229x337.jpg" alt="app tv">
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/aBkqu7EddWK7qmY4grL4I6edx2h-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">كبش الفداء</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
@@ -381,7 +427,7 @@ h1 {
                <!--+++++++++++++++++--> 
                <!--+++++++++++++++++-->  
          
-<button class="button"><img src="https://media.fushaar.com/media/2024/06/jSR06FpV1H36OmW0jfEmvG73l2r-229x337.jpg" alt="app tv">
+<button class="button"><img src="https://media.fushaar.com/media/2024/06/jSR06FpV1H36OmW0jfEmvG73l2r-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1"> قاتل الطائفة</div>
    <div class="khlfia">  سيرفرات المشاهدة</div> 
                         <!-- إضافة شكل الأرقام الدائرية -->
