--- a/aflam-mot-02.html
+++ b/aflam-mot-02.html
@@ -352,18 +352,16 @@ h1 {
 </head>
 <body>
 <div align="center" >
-
-
 <div class="container">
 <div id="page">
 <div class="section" data-section="aflam-modblja-002">
 <!--+++++++++++++++++-->
-<input id="searchbar" 
+<div align="center" ><input id="searchbar" 
        onkeyup="search_animal(); searchAnimals(event);" 
        type="text" 
        name="search" 
        placeholder="ابحث عن فيلم..." 
-       tabindex="1">
+       tabindex="1"></div> 
 <!--+++++++++++++++++-->
 <button class="button"><img src="https://media.fushaar.com/media/2024/07/6XJM3C47iGOK9nFU6yLFCSf4U5c-229x337.jpg" alt="app tv"onerror="handleImageError(this)">
         <div class="lkhat1">Trigger Warning</div>
